# NaviAgent

./: .dockerignore  .env.docker  .gitignore  .pre-commit-config.yaml  API_GUIDE.md  CONTRIBUTING.md  Dockerfile.api  Dockerfile.frontend  Dockerfile.planner  Dockerfile.reception  Makefile  README.md  SETUP.md  VENV_SETUP.md  check_chromadb.py  delete_chromadb.py  docker-compose.dev.yml  docker-compose.yml  format.ps1  pyproject.toml  requirements-api.txt  requirements-dev.txt  requirements.txt  run.py  travel_plan_output.json  travel_plan_output_1.json  travel_plan_output_2.json  travel_plan_output_4.json
.github/workflows/: ci.yml
docs/: GUIDEBOOK_GUIDE.md
frontend/: next.config.ts  package-lock.json  package.json  tsconfig.json
frontend/public/images/: MISSING_IMAGES.txt
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/explore/: page.tsx
frontend/src/app/itinerary/: page.tsx
frontend/src/app/itinerary/[id]/: page.tsx
frontend/src/app/plan/: page.tsx
frontend/src/app/visited/: page.tsx
frontend/src/components/: Header.tsx
frontend/src/contexts/: LanguageContext.tsx
frontend/src/styles/: explore.css  features.css  globals.css  header.css  home.css  itinerary-detail.css  itinerary.css  plan.css  visited.css
naviagent/: __init__.py  scripts.py
scripts/: check.py  crawl_images.py  fmt.py  gen_guidebook.py  lint.py
src/guidebook/: image_fetcher.py
src/guidebook/formatters/: base.py  base_formatter.py  enhanced_pdf_formatter.py  markdown_formatter.py
src/guidebook/templates/: guidebook_enhanced.html
src/guidebook/tests/: test_guidebook.py
src/guidebook/utils/: formatting_helpers.py
src/naviagent/: __init__.py  example.py  main.py
src/naviagent/core/: __init__.py  auth.py  config.py  database.py
src/naviagent/models/: __init__.py  models.py
src/naviagent/reception/: receptionist_agent.py
src/naviagent/reception/suggest_destination/: suggest_from_text.py
src/naviagent/routers/: __init__.py  auth.py  chat.py  plans.py  suggest_destinations.py  trips.py  users.py
src/naviagent/schemas/: __init__.py  models.py
src/naviagent/suggest_destination/: suggest_from_text.py
src/reception/: __init__.py  conversation_state.py  db_helpers.py  main.py  receptionist_agent.py  suggestion_agent.py  test_api.py
src/reception/config/: __init__.py
src/reception/suggest_destination/: __init__.py  embedding.py  retrieval.py  suggest_from_images.py  suggest_from_text.py
src/reception/suggest_destination/checkpoints/: config.json
src/reception/suggest_destination/chromadb/: chroma.sqlite3
src/reception/suggest_destination/chromadb/b6890ce2-3d79-4fba-b998-ae52bc282a4f/: index_metadata.pickle
src/reception/suggest_destination/config/: config.py
src/reception/suggest_destination/data/: description_destination_10k.csv
src/reception/suggest_destination/models/: CLIP_model.py
src/reception/suggest_destination/scripts/: evaluation.py  example.py  generate_data.py  index_data.py  search.py  train_contrastive_text_text.py
src/reception/tests/: __init__.py  test_api.py
src/travel_planner/: .flake8  .gitignore  __init__.py  main.py  test_api.py  test_google_search.py  test_ssl.py
src/travel_planner/agents/: __init__.py  accommodation_agent.py  advisory_agent.py  budget_agent.py  itinerary_agent.py  logistics_agent.py  orchestrator.py  orchestrator_agent.py  response_parser.py  souvenir_agent.py  travel_planning_team.py  update_agents.py  utils.py  weather_agent.py
src/travel_planner/config/: __init__.py  agent_factory.py  database.py  model_config.py
src/travel_planner/examples/: session_memory_demo.py
src/travel_planner/guidebook/: __init__.py  generator.py  image_fetcher.py
src/travel_planner/guidebook/formatters/: __init__.py  base.py  enhanced_pdf_formatter.py  html_formatter.py  markdown_formatter.py  pdf_formatter.py
src/travel_planner/guidebook/templates/: guidebook.css  guidebook.html  guidebook_enhanced.css  guidebook_enhanced.html
src/travel_planner/guidebook/tests/: __init__.py  test_guidebook.py
src/travel_planner/guidebook/utils/: __init__.py
src/travel_planner/models/: schemas.py
src/travel_planner/schemas/: __init__.py  request.py  response.py
src/travel_planner/tests/: check_db_direct.py  check_db_simple.py  check_memory_schema.py  debug_booking_response.py  debug_flight_offers.py  fix_memory_table.py  quick_test.py  test_agent_integration.py  test_all_flight_endpoints.py  test_api.py  test_booking_api.py  test_booking_flight_tools.py  test_booking_flights_params.py  test_database_integration.py  test_database_tables.py  test_duck_direct.py  test_external_apis.py  test_flight_api_direct.py  test_model_config.py  test_new_tools.py  test_search.py  test_session_history.py  test_session_quick.py  test_tools_direct.py  test_tools_simple.py  view_db_data.py
src/travel_planner/tools/: __init__.py  external_api_tools.py  search_tool.py
tests/: test_example.py  test_guidebook.py  test_receptionist_agent.py
tests/fixtures/: sample_travel_plan.json
